--- a/style.css
+++ b/style.css
@@ -2,47 +2,11 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background: rgb(130, 98, 219);
 }
 
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+  margin: 3rem auto;
   padding: 0 15px;
-}
-
-h1 {
-  text-align: center;
-}
-
-.wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 3rem 0;
-}
-
-.block:last-child {
-  padding: 0 2rem 0 0;
-}
-
-.block__item {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-  color: antiquewhite;
-}
-
-.element {
-  width: 100px;
-  height: 100px;
-  padding: 2rem;
-  border: 1px dashed rgb(65, 236, 108);
-}
-
-.element__inner {
-  background: chartreuse;
-  width: 100%;
-  height: 100%;
 }
